# vlm-to-ocr

./: .gitignore
dev/: dev_reset.ps1  slate.txt  tasks.md
src/data-pipeline/: SARVAM_DOCS.md  alembic.ini  db.py  main.py  pipeline.py  pyproject.toml  staging.py
src/data-pipeline/alembic/: env.py
src/data-pipeline/alembic/versions/: 75c5171dd81b_initial_migration.py
