[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "internetarchive>=5.7.2",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sarvamai>=0.1.24",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.4",
]
